--- a/public.css
+++ b/public.css
@@ -1,11 +1,12 @@
 ul{
     list-style-type: none;
-    display: flex;
+    display: flex;/* 弹性盒子模型 */
     padding: 0;
     margin: 0;
+    flex-direction: row;
 }
 ul li{
-    margin-right: 10px;
+    margin-right: 5%;
 }
 .bold_and_large {
     font-weight: bold; /* 加粗文本 */
