--- a/public.css
+++ b/public.css
@@ -1,9 +1,9 @@
 ul{
     list-style-type: none;
     display: flex;/* 弹性盒子模型 */
-    padding: 0;
-    margin: 0;
-    flex-direction: row;
+    padding: 0;/*内边距*/
+    margin: 0;/*外边距*/
+    flex-direction: row;/*用于指定flex容器内子元素的排列方向。*/
 }
 ul li{
     margin-right: 5%;
